# Portfolio_CPP

./: .gitmodules
CppTest/: CMakeLists.txt  conanfile copy.txt  conanfile.txt  main.cpp
CppTest/cmake/: FixOldVerPolicy.cmake  ForceOutOfSourceBuilds.cmake  SetDefaultBuildType.cmake  WarningFlags.cmake
CppTest2/ModernCMake/: CMakeLists.txt  backup.cpp  main.cpp
CppTest2/ModernCMake/cmake/: CPackConfig.cmake  FindFoo.cmake
CppTest2/ModernCMake/listlib/: CMakeLists.txt  ListLib.cpp  ListLib.h
CppTest2/ModernCMake/listlib/unit_test/: CMakeLists.txt  ListLibTest.cpp
CppTest2/ModernCMake/mylibexample/: CMakeLists.txt
CppTest2/ModernMeson/: CMakeLists.txt  simple_example.cpp  simple_lib.cpp
CppTest2/ModernMeson/ToDoCore/: CMakeLists.txt  ToDo.cpp  ToDo.h
CppTest2/ModernMeson/ToDoCore/unit_test/: CMakeLists.txt  ToDoTest.cpp
CppTest2/libs/astar-algorithm-cpp/cpp/: findpath.cpp  min_path_to_Bucharest.cpp
CppTest2/libsodiumpp/: CMakeLists.txt  sodiumpp.cpp  sodiumpp.h  sodiumpp_tests.cpp
